# api/api.bm.go
@@ -33,6 +33,7 @@ var PathRiotDocInx = "/riot/docinx"
 var PathRiotDelete = "/riot/del"
 var PathRiotSearch = "/riot/search"
 var PathRiotWgDist = "/riot/search"
+var PathRiotKill = "/riot/kill"
 
 // RiotBMServer is the server API for Riot service.
 type RiotBMServer interface {
@@ -51,6 +52,8 @@ type RiotBMServer interface {
 	Search(ctx context.Context, req *SearchReq) (resp *SearchReply, err error)
 
 	WgDist(ctx context.Context, req *WgDistReq) (resp *WgDistResp, err error)
+
+	Kill(ctx context.Context, req *KillReq) (resp *KillResp, err error)
 }
 
 var RiotSvc RiotBMServer
@@ -127,6 +130,15 @@ func riotWgDist(c *bm.Context) {
 	c.JSON(resp, err)
 }
 
+func riotKill(c *bm.Context) {
+	p := new(KillReq)
+	if err := c.BindWith(p, binding.Default(c.Request.Method, c.Request.Header.Get("Content-Type"))); err != nil {
+		return
+	}
+	resp, err := RiotSvc.Kill(c, p)
+	c.JSON(resp, err)
+}
+
 // RegisterRiotBMServer Register the blademaster route
 func RegisterRiotBMServer(e *bm.Engine, server RiotBMServer) {
 	RiotSvc = server
@@ -138,4 +150,5 @@ func RegisterRiotBMServer(e *bm.Engine, server RiotBMServer) {
 	e.POST("/riot/del", riotDelete)
 	e.POST("/riot/search", riotSearch)
 	e.POST("/riot/search", riotWgDist)
+	e.POST("/riot/kill", riotKill)
 }
